--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
         <div class="search-section">
             <img class="logo" src="img/hero-banner.png" alt="background">
             <h1>Make Your Dream Team</h1>
-            <form class="form" action="/search" method="post">
-                <input type="search" id="search" placeholder="Search for player">
-                <button id="search-button" class="search-button">Search</button>
+            <form class="form" action="/" method="post">
+                <input type="search" id="search" class="search" placeholder="Search for player">
+                <input id="search-button" class="search-button" type="submit" value="Search">
             </form>
             <div class="players-container">
                 <!-- <div class="player-card">
@@ -62,6 +62,9 @@
             <div class="player" data-player='11'>11</div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/addPlayer.js"></script>
+    <script src="js/showPlayers.js"></script>
+    <script src="js/createElement.js"></script>
+    <script src="js/dom.js"></script>
 </body>
 </html>
