finish from back-end and add api url and fetch data to front Relates #11

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,10 @@
         <div class="search-section">
             <img class="logo" src="img/hero-banner.png" alt="background">
             <h1>Make Your Dream Team</h1>
-            <form class="form" action="/" method="post">
-                <input type="search" id="search" class="search" placeholder="Search for player">
-                <input id="search-button" class="search-button" type="submit" value="Search">
+            <form class="form">
+                <input name="player" type="search" id="search" class="search" placeholder="Search for player">
+                <button type="button" id="search-button"> Click</button>
+                <!-- <input id="search-button" class="search-button" type="submit" value="Search"> -->
             </form>
             <div class="players-container">
                 <!-- <div class="player-card">
