Finished media query Relates #13

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <h1>Make Your Dream Team</h1>
             <form class="form">
                 <input name="player" type="search" id="search" class="search" placeholder="Search for player">
-                <button type="button" id="search-button"> Click</button>
+                <button type="button" id="search-button"> Search</button>
                 <!-- <input id="search-button" class="search-button" type="submit" value="Search"> -->
             </form>
             <div class="players-container">
