--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Barriecito&family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style404.css">
+    <link rel="stylesheet" href="css/errorStyle.css">
     <title>404 ERROR</title>
 </head>
 <body>
