--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <h1>Make Your Dream Team</h1>
             <form class="form">
                 <input name="player" type="search" id="search" class="search" placeholder="Search for player">
-                <button type="button" id="search-button"> Search</button>
+                <button type="submit" id="search-button"> Search</button>
             </form>
             <div class="players-container">
 
